/* [START declaration] */
syntax = "proto3";
package vmware.blockchain.deployment.v1;

import "vmware/blockchain/deployment/v1/concord_cluster.proto";
import "vmware/blockchain/deployment/v1/concord_model.proto";
import "vmware/blockchain/deployment/v1/core.proto";
import "vmware/blockchain/deployment/v1/configuration_service.proto";
/* [END declaration] */

option go_package = "vmware.com/blockchain/deployment/v1;deployment";

/* [START java_declaration] */
option java_package = "com.vmware.blockchain.deployment.v1";
option java_multiple_files = true;
/* [END java_declaration] */

/* [START messages] */
message ConcordAgentConfiguration {
    ConcordModelSpecification model = 1;
    Endpoint container_registry = 2;
    Endpoint fleet_service = 3 [deprecated = true];
    ConcordClusterIdentifier cluster = 4 [deprecated = true];
    int32 node = 5 [deprecated = true];
    Endpoint config_service = 6;
    ConfigurationSessionIdentifier configuration_session = 7;
    OutboundProxyInfo outbound_proxy_info = 8;
    string node_id = 9;
    Properties properties = 10;
    Endpoint notary_server = 11;
    string opid = 12;
}

enum AgentAttributes {
    COMPONENT_NO_LAUNCH = 0;
    NEW_DATA_DISK = 1;
}
/* [END messages] */
